fix footer overlap

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,6 @@
 @import 'settings', 'src/styles/typography';
 
 .Footer {
-  display: flex;
   flex-direction: column;
   align-items: center;
 
@@ -34,7 +33,7 @@
 
     @media ($medium-up) {
       align-items: start;
-      width: 40vw;
+      width: 50%;
     }
   }
 
